# jotdown_rust_cli

./: .gitignore  .jotdown-db.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  jotdown-db.json
.github/workflows/: rust.yml
automation/scripts/: add_exec_path.bat  add_exec_path.sh  build_release.bat  build_release.sh
release/: README.md  jd
src/: main.rs
src/dao/: mod.rs  read_json.rs  send_notification.rs  write_json.rs
src/facade/: add_handler.rs  clear_handler.rs  help_handler.rs  list_handler.rs  misc_handler.rs  mod.rs
src/features/: add.rs  clear.rs  command.rs  list.rs  misc.rs  mod.rs  update.rs
src/util/: config.rs  display.rs  enums.rs  helpers.rs  mod.rs  models.rs
