[package]
name = "jotdown"
version = "0.1.0"
edition = "2021"
description = "A modern Todo application with extra features!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive", "color", "help", "cargo"]}
serde_derive = "1.0.188"
serde = "1.0.188"
serde_json = "1.0.107"
colored = "2.0.4"
chrono = "0.4.31"