[package]
name = "jotdown"
version = "1.2.0"
edition = "2021"
description = "A modern Todo application with extra features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # optimize for size
codegen-units = 1

[dependencies]
clap = { version = "4.4.6", features = ["derive", "color", "help", "cargo"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"
colored = "2.0.4"
chrono = "0.4.31"
dirs = "5.0"
tokio = { version = "1.28.2", features = ["full"] }
indicatif = "0.17.8"